--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_VacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_VacancyDetails.cshtml
@@ -100,11 +100,14 @@
             </div>
             @if (Model.IsSingleLocation || Model.IsNationwideLocation)
             {
-                <div class="@editableItemClass">
-                    <h3 class="bold-small">Positions</h3>
-                    <p id="vacancy-reference-id">@Model.NewVacancyViewModel.NumberOfPositions available</p>
-                    @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.NumberOfPositions, Model.EmployerLink, Model.NewVacancyViewModel.NumberOfPositionsComment))
-                </div>
+                if ((!Model.IsManageReviewerView && Model.IsNationwideLocation) || (!Model.IsCandidateView && Model.IsNationwideLocation))
+                {
+                    <div class="@editableItemClass">
+                        <h3 class="bold-small">Positions</h3>
+                        <p id="vacancy-reference-id">@Model.NewVacancyViewModel.NumberOfPositions available</p>
+                        @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.NumberOfPositions, Model.EmployerLink, Model.NewVacancyViewModel.NumberOfPositionsComment))
+                    </div>
+                }
             }
             else
             {
