Maps are working again

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
@@ -163,7 +163,7 @@ else
 
                                     <a href="#" class="summary-style hide-nojs journey-trigger">Journey time</a>
                                     <div class="detail-content toggle-content hide-nojs">
-                                        <select class="form-control valid" name="" aria-invalid="false">
+                                        <select class="form-control valid select-mode" name="" aria-invalid="false">
                                             <option value="DRIVING" aria-live="polite">Driving</option>
                                             <option value="TRANSIT" aria-live="polite">Bus/Train</option>
                                             <option value="WALKING" aria-live="polite">Walking</option>
