--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -120,3 +120,15 @@ iframe, object, embed {
     margin-right: 10px;
     margin-top: 10px;
 }
+
+
+@media (min-width: 641px) {
+    .search-result .map {
+        height: 125px;
+    }
+}
+
+.search-result .map {
+    width: 100%;
+    height: 200px;
+}
