ra-402: Do not show address for anonymous traineeship vacancy.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
@@ -57,14 +57,14 @@
                 @if (!Model.IsEmployerAnonymous)
                 {
                     <h3 class="bold-small">Training provider</h3>
-                            <p>@Model.RecruitmentAgency</p>
+                    <p>@Model.RecruitmentAgency</p>
                 }
                 else
                 {
                     <h3 class="bold-small">Training provider</h3>
                     <p>@Model.ProviderName</p>
                 }
-                
+
 
                 <h3 class="bold-small">Contact</h3>
                 <p>@Model.Contact</p>
@@ -77,7 +77,7 @@
                 @if (Model.Distance != null)
                 {
                     <h3 class="bold-small">Distance</h3>
-                            <p id="vacancy-distance">@Model.Distance miles</p>
+                    <p id="vacancy-distance">@Model.Distance miles</p>
                 }
 
                 <h3 class="bold-small">Reference number</h3>
@@ -94,31 +94,53 @@
                 <div class="grid grid-1-2">
                     <div class="inner-block-padr">
                         <p id="vacancy-employer-name" class="@(Model.IsWellFormedEmployerWebsiteUrl ? "no-btm-margin" : "")">@Model.EmployerName</p>
-                        @if (Model.IsWellFormedEmployerWebsiteUrl)
+                        @if (Model.IsEmployerAnonymous)
                         {
-                            <p><a itemprop="url" href="@Model.EmployerWebsite" id="vacancy-employer-website" target="_blank" title="@Model.EmployerName Website" rel="external">@Model.EmployerWebsite</a></p>
+                            <div itemscope itemtype="http://schema.org/PostalAddress">
+                                <h3 class="bold-small">Address</h3>
+                                <div itemprop="address">
+                                    <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
+                                </div>
+                            </div>
                         }
                         else
                         {
-                            <p>@Model.EmployerWebsite</p>
-                        }
-                        <div itemscope itemtype="http://schema.org/PostalAddress">
-                            <h3 class="bold-small">Address</h3>
-                            <div itemprop="address">
-                                <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine1</p>
-                                <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine2</p>
-                                <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine3</p>
-                                <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
-                                <p class="small-btm-margin" itemprop="addressRegion">@Model.VacancyAddress.County</p>
-                                <p class="" itemprop="postalCode">@Model.VacancyAddress.Postcode</p>
+                            if (Model.IsWellFormedEmployerWebsiteUrl)
+                            {
+                                <p><a itemprop="url" href="@Model.EmployerWebsite" id="vacancy-employer-website" target="_blank" title="@Model.EmployerName Website" rel="external">@Model.EmployerWebsite</a></p>
+                            }
+                            else
+                            {
+                                <p>@Model.EmployerWebsite</p>
+                            }
+                            <div itemscope itemtype="http://schema.org/PostalAddress">
+                                <h3 class="bold-small">Address</h3>
+                                <div itemprop="address">
+                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine1</p>
+                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine2</p>
+                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine3</p>
+                                    <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
+                                    <p class="small-btm-margin" itemprop="addressRegion">@Model.VacancyAddress.County</p>
+                                    <p class="" itemprop="postalCode">@Model.VacancyAddress.Postcode</p>
+                                </div>
                             </div>
-                        </div>
+                        }
                     </div>
                 </div>
                 <div class="grid grid-1-2 hide-print">
                     <div class="ad-details__map">
                         <div class="map-overlay" onclick="style.pointerEvents = 'none'"></div>
-                        <iframe width="700" height="250" frameborder="0" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Html.Raw(Model.VacancyAddress.Postcode),+United+Kingdom&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
+                        @if (Model.IsEmployerAnonymous)
+                        {
+                            <div id="anonymous-map">
+                                <iframe width="700" height="250" title="Map of location" style="border: 0" src="https://www.google.com/maps/embed/v1/view?center=@Model.VacancyAddress.GeoPoint.Latitude,@Model.VacancyAddress.GeoPoint.Longitude&amp;zoom=9&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
+                            </div>
+                        }
+                        else
+                        {
+                            <iframe width="700" height="250" frameborder="0" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Html.Raw(Model.VacancyAddress.Postcode),+United+Kingdom&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
+                        }
+
                         <p class="nojs-notice">You must have JavaScript enabled to view a map of the location</p>
                     </div>
                 </div>
@@ -143,7 +165,7 @@
                 <p class="@Model.PersonalQualities.GetPreserveFormattingCssClass()">@HtmlExtensions.EscapeHtmlEncoding(Html, Model.PersonalQualities)</p>
 
                 @if (!string.IsNullOrWhiteSpace(Model.FutureProspects))
-        {
+                {
                     <h3 class="heading-small">What this will lead to</h3>
                     <p id="vacancy-future-prospects" class="@Model.FutureProspects.GetPreserveFormattingCssClass()">@HtmlExtensions.EscapeHtmlEncoding(Html, Model.FutureProspects)</p>
                 }
