Fixed up the styles on the search results page

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
@@ -202,7 +202,7 @@ else
                         
                         @if (vacancy.VacancyLocationType == ApprenticeshipLocationType.NonNational)
                         {
-                            <div class="hide-tablet hide-nojs">
+                            <div class="hide-tablet hide-nojs column-two-thirds">
                                 <span style="margin-left: 0;" class="summary-style fake-link mob-map-trigger map-closed">Show/hide map</span>
                             </div>
                                     <div class="column-one-third map-container hide-nojs small-btm-margin toggle-content--mob">
