--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -1,4 +1,6 @@
-﻿@import "_sfa-custom-layouts";
+﻿@import "conditionals";
+
+@import "_sfa-custom-layouts";
 
 @import "_button-links";
 @import "_tabbed-nav";
