--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="header-global">
                 <div class="header-logo">
                     <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content">
-                        <img src="@Url.Content("~/Content/_assets/img/gov.uk_logotype_crown_invert_trans.png")?0.19.0" width="36" height="32" alt=""> GOV.UK
+                        <img src="@Url.Content("~/Content/_assets/img/gov.uk_logotype_crown_invert_trans.png")" width="36" height="32" alt=""> GOV.UK
                     </a>
                 </div>
 
