--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
@@ -516,7 +516,7 @@
     </p> -->
 </div>
 
-<ol id="appFormTour" class="alwayshidden">
+<ol id="appFormTour" class="sfa-hide">
     <li data-id="appTourStart" data-next-button="Start tour">
         <div aria-live="polite">
             <p>
