--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/NextSteps.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/NextSteps.cshtml
@@ -122,7 +122,7 @@
         <div class="get-started">@Html.RouteLink("Find an apprenticeship", CandidateRouteNames.ApprenticeshipSearch, null, new { @id = "find-apprenticeship-button", @class = "button" })</div>
     </div>
 </div>
-<ol id="newAppChanges" class="alwayshidden">
+<ol id="newAppChanges" class="sfa-hide">
     <li class="tourPushDown" data-id="applicationsLink" data-button="Close">
         <h3 class="heading-small">Updates to your applications</h3>
         <p aria-live="polite">You've got 2 updates</p>
