--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Login/ResetPassword.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Login/ResetPassword.cshtml
@@ -11,8 +11,8 @@
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     //Hide some inputs to stop chrome from autofilling
-    <input title="Hidden username" type="text" class="alwayshidden" />
-    <input title="Hidden password" type="password" class="alwayshidden" />
+    <input title="Hidden username" type="text" class="sfa-hide" />
+    <input title="Hidden password" type="password" class="sfa-hide" />
 
     <fieldset class="inner-block-padr">
         <legend class="heading-large">Password reset</legend>
