--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -9,6 +9,7 @@
 @import "_page-nav";
 
 @import "_select2-styles";
+@import "_address-service-styles";
 
 $path: "/Content/_assets/img/";
 $warning-colour: #2b8cc4;
