--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Apply.cshtml
@@ -110,7 +110,7 @@
     Saved
 </div>
 
-<ol id="appFormTour" class="alwayshidden">
+<ol id="appFormTour" class="sfa-hide">
     <li data-id="appTourStart" data-next-button="Start tour">
         <div aria-live="polite">
             <p>
