--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/styles.css
@@ -822,6 +822,82 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .select2-search input {
     background-position: 100% -21px !important; } }
 
+.ui-autocomplete {
+  position: absolute;
+  cursor: default; }
+
+* html .ui-autocomplete {
+  width: 1px; }
+
+.ui-menu {
+  list-style: none;
+  padding: 2px;
+  margin: 0;
+  display: block;
+  float: left; }
+
+.ui-menu .ui-menu {
+  margin-top: -3px; }
+
+.ui-menu .ui-menu-item {
+  margin: 0;
+  padding: 0;
+  zoom: 1;
+  float: left;
+  clear: left;
+  width: 100%; }
+
+.ui-menu .ui-menu-item a {
+  text-decoration: none;
+  display: block;
+  padding: .2em .4em;
+  line-height: 1.5;
+  zoom: 1; }
+
+.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
+  font-weight: normal;
+  margin: -1px; }
+
+.ui-helper-hidden-accessible {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
+.ui-autocomplete {
+  background: #fff;
+  border: 1px solid #bfc1c3;
+  list-style-type: none;
+  max-height: 370px;
+  max-width: 100%;
+  overflow-y: auto; }
+
+.ui-autocomplete .ui-menu-item {
+  cursor: pointer;
+  font-family: "nta",Arial,sans-serif;
+  font-size: 16px;
+  line-height: 1.25;
+  font-weight: 300;
+  text-transform: none;
+  padding-top: 8px;
+  padding-bottom: 7px; }
+
+@media (max-width: 640px) {
+  .ui-autocomplete .ui-menu-item {
+    font-size: 14px; } }
+
+@media (min-width: 641px) {
+  .ui-autocomplete .ui-menu-item {
+    padding-top: 5px;
+    padding-bottom: 5px; } }
+
+.ui-autocomplete .ui-menu-item a:hover, .ui-autocomplete .ui-menu-item .ui-state-focus {
+  background: #dee0e2; }
+
 .grid-row:after, #content:after, .notice:after, .panel:after, fieldset:after, .form-section:after, .form-group:after, .form-block:after, .breadcrumbs ol:after {
   content: "";
   display: block;
@@ -2029,9 +2105,10 @@ textarea {
   font-size: 16px;
   line-height: 1.25;
   width: 100%;
-  padding: 4px;
-  background-color: #fff;
-  border: 2px solid #6f777b; }
+  padding: 5px 4px 4px;
+  color: inherit;
+  background-color: transparent;
+  border: 2px solid; }
   @media (min-width: 641px) {
     .form-control {
       font-size: 19px;
@@ -2100,24 +2177,89 @@ textarea.form-control {
   float: none;
   clear: left;
   position: relative;
-  background: #dee0e2;
-  border: 1px solid #dee0e2;
-  padding: 18px 30px 15px 54px;
+  padding: 8px 10px 9px 50px;
   margin-bottom: 10px;
-  cursor: pointer; }
+  cursor: pointer;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation; }
   @media (min-width: 641px) {
     .block-label {
-      float: left; } }
+      float: left;
+      padding-top: 7px;
+      padding-bottom: 7px; } }
   .block-label input {
     position: absolute;
-    top: 15px;
-    left: 15px;
     cursor: pointer;
-    margin: 0;
-    width: 29px;
-    height: 29px; }
-  .block-label:hover {
-    border-color: #0b0c0c; }
+    left: 0;
+    top: 0;
+    width: 38px;
+    height: 38px; }
+    .js-enabled .block-label input {
+      margin: 0;
+      zoom: 1;
+      filter: alpha(opacity=0);
+      opacity: 0; }
+  .js-enabled .block-label.selection-button-radio::before {
+    content: "";
+    border: 2px solid;
+    background: transparent;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%; }
+  .js-enabled .block-label.selection-button-radio::after {
+    content: "";
+    border: 10px solid;
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 9px;
+    left: 9px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    zoom: 1;
+    filter: alpha(opacity=0);
+    opacity: 0; }
+  .js-enabled .block-label.selection-button-checkbox::before {
+    content: "";
+    border: 2px solid;
+    background: transparent;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .js-enabled .block-label.selection-button-checkbox::after {
+    content: "";
+    border: solid;
+    border-width: 0 0 5px 5px;
+    background: transparent;
+    width: 17px;
+    height: 7px;
+    position: absolute;
+    top: 10px;
+    left: 8px;
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    zoom: 1;
+    filter: alpha(opacity=0);
+    opacity: 0; }
+  .js-enabled .block-label.selection-button-radio.focused::before, .js-enabled .block-label.selection-button-checkbox.focused::before {
+    -webkit-box-shadow: 0 0 0 5px #ffbf47;
+    -moz-box-shadow: 0 0 0 5px #ffbf47;
+    box-shadow: 0 0 0 5px #ffbf47; }
+  .js-enabled .block-label.selection-button-radio.selected::after, .js-enabled .block-label.selection-button-checkbox.selected::after {
+    zoom: 1;
+    filter: alpha(opacity=100);
+    opacity: 1; }
   .block-label:last-child, .block-label:last-of-type {
     margin-bottom: 0; }
 
@@ -2126,17 +2268,7 @@ textarea.form-control {
   @media (min-width: 641px) {
     .inline .block-label {
       margin-bottom: 0;
-      margin-right: 10px; } }
-
-.js-enabled label.selected {
-  background: #fff;
-  border-color: #0b0c0c; }
-
-.js-enabled label.focused {
-  outline: 3px solid #ffbf47; }
-
-.js-enabled .focused input:focus {
-  outline: none; }
+      margin-right: 30px; } }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -2252,13 +2384,13 @@ input[type=number] {
   .breadcrumbs a {
     color: #0b0c0c; }
 
-.phase-banner-alpha {
+.phase-banner {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3; }
   @media (min-width: 641px) {
-    .phase-banner-alpha {
+    .phase-banner {
       padding-bottom: 10px; } }
-  .phase-banner-alpha p {
+  .phase-banner p {
     display: table;
     margin: 0;
     color: #000;
@@ -2268,10 +2400,10 @@ input[type=number] {
     font-size: 14px;
     line-height: 1.14286; }
     @media (min-width: 641px) {
-      .phase-banner-alpha p {
+      .phase-banner p {
         font-size: 16px;
         line-height: 1.25; } }
-  .phase-banner-alpha .phase-tag {
+  .phase-banner .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
     margin: 0 8px 0 0;
@@ -2285,21 +2417,24 @@ input[type=number] {
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #d53880; }
+    background-color: #005ea5; }
     @media (min-width: 641px) {
-      .phase-banner-alpha .phase-tag {
+      .phase-banner .phase-tag {
         font-size: 16px;
         line-height: 1.25; } }
-  .phase-banner-alpha span {
+  .phase-banner span {
     display: table-cell;
     vertical-align: baseline; }
 
+.phase-banner-alpha,
 .phase-banner-beta {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3; }
   @media (min-width: 641px) {
+    .phase-banner-alpha,
     .phase-banner-beta {
       padding-bottom: 10px; } }
+  .phase-banner-alpha p,
   .phase-banner-beta p {
     display: table;
     margin: 0;
@@ -2310,9 +2445,11 @@ input[type=number] {
     font-size: 14px;
     line-height: 1.14286; }
     @media (min-width: 641px) {
+      .phase-banner-alpha p,
       .phase-banner-beta p {
         font-size: 16px;
         line-height: 1.25; } }
+  .phase-banner-alpha .phase-tag,
   .phase-banner-beta .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
@@ -2327,11 +2464,13 @@ input[type=number] {
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #f47738; }
+    background-color: #005ea5; }
     @media (min-width: 641px) {
+      .phase-banner-alpha .phase-tag,
       .phase-banner-beta .phase-tag {
         font-size: 16px;
         line-height: 1.25; } }
+  .phase-banner-alpha span,
   .phase-banner-beta span {
     display: table-cell;
     vertical-align: baseline; }
