--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -1,6 +1,6 @@
 ﻿@import "_sfa-custom-layouts";
 @import "_govuk-custom"; 
-﻿@import "conditionals";
+@import "conditionals";
 
 @import "_button-links";
 @import "_tabbed-nav";
